Thu Feb  4 11:53:56 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: Introduce two variables (UNICODE_DATA_DIR and
	  UNICODE_SRC_DATA_DIR) to eliminate repetitions.

Wed Feb  3 12:13:20 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (str_new_frozen): if the given string is embeddedable
	  but not embedded, embed a new copied string. [Bug #11946]

Wed Feb  3 08:25:38 2016  boshan  <boshan@subsplash.com>

	* ext/openssl/ossl_pkey.c (Init_ossl_pkey): [DOC] Fix typo
	  "encrypted" to "decrypted".  [Fix GH-1235]

Wed Feb  3 08:21:32 2016  Seiei Miyagi  <hanachin@gmail.com>

	* ext/ripper/lib/ripper/lexer.rb (on_heredoc_dedent): Fix
	  Ripper.lex error in dedenting squiggly heredoc.  heredoc tree is
	  also an array of Elem in the outer tree.  [Fix GH-1234]

Wed Feb  3 02:33:39 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_prepare_enc): use already compiled US-ASCII regexp
	  if given string is ASCII only.
	  121.2s to 113.9s on my x86_64-freebsd10.2 Intel Core i5 661

Tue Feb  2 13:02:03 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c: Introduce RREGEXP_PTR.
	  patch by dbussink.
	  partially merge https://github.com/ruby/ruby/pull/497

	* include/ruby/ruby.h: ditto.

	* gc.c: ditto.

	* ext/strscan/strscan.c: ditto.

	* parse.y: ditto.

	* string.c: ditto.

Tue Feb  2 09:08:27 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems/specification.rb: `coding` is effective only first
	  line except shebang.

	* lib/rubygems/package.rb, lib/rubygems/package/*: ditto.

Mon Feb  1 21:41:58 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems.rb, lib/rubygems/*, test/rubygems/*: Update rubygems-2.5.2.
	  It supports to enable frozen string literal and add `--norc` option for
	  disable to `.gemrc` configuration.
	  See 2.5.2 release notes for other fixes and enhancements.
	  https://github.com/rubygems/rubygems/blob/a8aa3bac723f045c52471c7b9328310a048561e0/History.txt#L3
